--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,35 +1,71 @@
-<!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Litoral Noticias</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div>
-            <h1>logo</h1>
-        </div>
+      <nav>
+        <div class="logo">
+          <a href="/notices">
+            <h1>Litoral Noticias</h1>
+          </a>
 
-        <nav>
-            <ul>
-                <li>notices</li>
-                <li>login</li>
-                <li>sing up</li>
-            </ul>
-        </nav>
+        </div>
+        <ul>
+
+{{#if session.role}}
+   <li><a class="nav-link" href="/notices">noticias</a> </li>
+   <li><a class="nav-link" href="/notices">dashboard</a> </li>
+   <li><a class="nav-link" href="/auth/logout">sair</a> </li>
+  {{else}}
+
+ {{#if session.userid}}
+
+            <li><a class="nav-link" href="/notices">noticias</a> </li>
+            <li><a class="nav-link" href="/auth/logout">sair</a> </li>
+            <li>
+              <a href="/user/profile">
+                <img
+                  src="/profileImages/{{session.profileImage}}"
+                  alt="imagem de perfil"
+                />
+              </a>
+            </li>
+          {{else}}
+
+            <li><a class="nav-link" href="/notices">noticias</a> </li>
+            <li><a class="nav-link" href="/auth/login">entrar</a></li>
+            <li><a class="nav-link" href="/auth/register">cadastrar</a></li>
+
+          {{/if}}
+{{/if}}
+
+         
+
+        </ul>
+      </nav>
     </header>
     <main>
-        {{{body}}}
+      {{#if messages.message}}
+
+        <div class="message">
+          <p>{{messages.message}}</p>
+        </div>
+
+      {{/if}}
+      {{{body}}}
     </main>
 
     <footer>
-        
+      footer
     </footer>
 
-</body>
+  </body>
 
 </html>
