--- a/frontend/Litoral-Noticias/src/app/app.component.css
+++ b/frontend/Litoral-Noticias/src/app/app.component.css
@@ -1,6 +1,7 @@
 main {
     margin: 0 auto;
     width: 980px;
-    height: 60vh;
+    height: 80vh;
     margin-top: 1.5em;
+    margin-bottom: 1em;
 }
