--- a/frontend/Litoral-Noticias/src/styles.css
+++ b/frontend/Litoral-Noticias/src/styles.css
@@ -1,13 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Lato', sans-serif;;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
 }
 
 a {
-    text-decoration: none;
-    font-weight: 500;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+a.readmore {
+  font-style: normal;
+  font-size: 16px;
+  line-height: 19px;
+    transition: 0.5s;
+  color: rgba(30, 96, 86, 0.74);
+}
+a.readmore:hover {
+    opacity: .7;    
 }
